some changes on class donneur and receveur