@@ -2,11 +2,17 @@ package model;
 import java.util.stream.Collectors;
 
 import javax.persistence.*;
+
+import service.MatchingService;
+
 import java.util.List;
 
 @Entity
 @Table(name = "receveurs")
 public class Receveur {
+	public enum Priorite {
+	    NORMAL, URGENT, CRITIQUE
+	}
 
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
@@ -21,23 +27,53 @@ public class Receveur {
     @Enumerated(EnumType.STRING)
     private GroupeSanguin groupeSanguin;
 
-    private String situation; 
+    @Enumerated(EnumType.STRING)
+    private Priorite priorite;
 
     @Enumerated(EnumType.STRING)
     private StatutReceveur statut = StatutReceveur.EN_ATTENTE;
 
     @OneToMany(mappedBy = "receveur")
     private List<Donneur> donneurs;
-
-    // Méthode de mise à jour du statut
-    public void majStatut() {
-        int nbPoches = donneurs != null ? donneurs.size() : 0;
-        if ((situation.equals("NORMAL") && nbPoches >= 1)
-         || (situation.equals("URGENT") && nbPoches >= 3)
-         || (situation.equals("CRITIQUE") && nbPoches >= 4)) {
-            this.statut = StatutReceveur.TRAITE;
+    
+    public int nombreDePochesNecessaires() {
+        if (priorite == null) return 1;
+        switch (priorite) {
+            case CRITIQUE:
+                return 4;
+            case URGENT:
+                return 3;
+            default: // NORMAL
+                return 1;
         }
     }
+    // Méthode de mise à jour du statut
+    public void majStatut() {
+        int nbPoches = (donneurs != null) ? donneurs.size() : 0;
+        int nbNecessaire;
+
+        if (priorite == null) {
+            nbNecessaire = 1; // valeur par défaut
+        } else {
+            switch (priorite) {
+                case CRITIQUE:
+                    nbNecessaire = 4;
+                    break;
+                case URGENT:
+                    nbNecessaire = 3;
+                    break;
+                default: // NORMAL
+                    nbNecessaire = 1;
+            }
+        }
+
+        if (nbPoches >= nbNecessaire) {
+            this.statut = StatutReceveur.SATISFAIT;
+        } else {
+            this.statut = StatutReceveur.EN_ATTENTE;
+        }
+    }
+
 
 	public Long getId() {
 		return id;
@@ -95,13 +131,14 @@ public class Receveur {
 		this.groupeSanguin = groupeSanguin;
 	}
 
-	public String getSituation() {
-		return situation;
+	public Priorite getPriorite() {
+	    return priorite;
 	}
 
-	public void setSituation(String situation) {
-		this.situation = situation;
+	public void setPriorite(Priorite priorite) {
+	    this.priorite = priorite;
 	}
+
 
 	public StatutReceveur getStatut() {
 		return statut;
@@ -120,13 +157,16 @@ public class Receveur {
 	}
     
 
+	private MatchingService matchingService = new MatchingService();
+
 	public List<Donneur> getDonneursAssocies() {
-	    if (donneurs == null) return List.of(); 
+	    if (donneurs == null) return java.util.Collections.emptyList();
 	    return donneurs.stream()
-	                   .filter(d -> !d.isContreIndication()) 
-	                   .filter(d -> d.getGroupeSanguin() == this.groupeSanguin) 
-	                   .collect(Collectors.toList());
+	            .filter(d -> !d.isContreIndication())
+	            .filter(d -> matchingService.estCompatible(d.getGroupeSanguin(), this.groupeSanguin))
+	            .collect(Collectors.toList());
 	}
+
 
 
    }
